...
        <View style={styles.form}>
          <Input
            autoCapitalize="none"
            autoCorrect={false}
            label="Username"
            onChangeText={setUsername}
            placeholder="Enter username"
            value={username}
          />

          <Input
            autoCapitalize="none"
            autoCorrect={false}
...
